--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "modern-dijkstra",
   "version": "1.1.0",
+  "type": "module",
+  "main": "dijkstra.js",
   "description": "A modern JavaScript implementation of Dijkstra's single-source shortest-paths algorithm.",
   "scripts": {
-    "test": "mocha -r esm"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
